fixed issue with navbar not collapsing

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -53,4 +53,8 @@ body {
     padding: 0px;
     margin-right: 0px;
   }
+
+  .sessions-container {
+    width: 100%;
+  }
 }
