--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -23,6 +23,10 @@
   padding-bottom: 0px;
 }
 
+.lists-card-row {
+  margin-left: 0px;
+}
+
 .card img {
   height: 35vh;
   object-fit: cover;
